--- a/01-Software Setup.ipynb
+++ b/01-Software Setup.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0f936d05",
    "metadata": {},
    "source": [
     "# Software Setup"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "901ff7ef",
    "metadata": {},
    "source": [
     "## Folder structure for the course\n",
@@ -37,7 +35,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a0650ab",
    "metadata": {},
    "source": [
     "## Windows computers"
@@ -45,7 +42,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3047c6dc",
    "metadata": {},
    "source": [
     "### Installing Git\n",
@@ -109,7 +105,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca49b163",
    "metadata": {},
    "source": [
     "### Installing Anaconda Python <a name=\"InstallingAnaconda\"></a>\n",
@@ -142,7 +137,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62317553",
    "metadata": {},
    "source": [
     "\n",
@@ -261,14 +255,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1db448a6",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "d0bfb800",
    "metadata": {},
    "source": [
     "## MacOS computers\n",
@@ -279,7 +271,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c23968f0",
    "metadata": {},
    "source": [
     "## Linux computers\n",
@@ -291,7 +282,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "455b42f6",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +299,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "334c0296",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -317,7 +306,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -331,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
