WIP 01-Software Setup

--- a/01-Software Setup.ipynb
+++ b/01-Software Setup.ipynb
@@ -10,14 +10,101 @@
   },
   {
    "cell_type": "markdown",
+   "id": "901ff7ef",
+   "metadata": {},
+   "source": [
+    "## Folder structure for the course\n",
+    "\n",
+    "+ You should create a **specific folder** for this course under your user folder. Under Windows a typical location\n",
+    "could be something like (the ellipsis represents possible intermediate folders):\n",
+    "\n",
+    "    `C:/Users/your_user_folder/.../MasterBD/FMAD/`\n",
+    "    \n",
+    " while for MacOS users you should use something like: \n",
+    " \n",
+    "    `/Users/your_user_folder/.../MasterBD/FMAD/`\n",
+    "\n",
+    "  and finally for Linux it would be:\n",
+    "\n",
+    "    `/home/your_user_folder/.../MasterBD/FMAD/`\n",
+    "    \n",
+    "+ **The folder that you have created will always be referred to in these notes as the Course Folder**. In the above examples we named it `FMAD` but you can give it any name you want. As usual, it is a good idea to keep it short and meaningful (and free of spaces, unusual characters, etc.) \n",
+    " \n",
+    "+ We will be using Git and [GitHub](https://github.com) repositories for the Course Notes and Assignments. In particular, the following repository will be used to share all the common course material:  \n",
+    "    [https://github.com/mbdfmad/fmad2223](https://github.com/mbdfmad/fmad2223)  \n",
+    "  In the next section we will tell you how to get a local copy of this repository to your computer. For the time being you can browse the contents of the repository, but do not download it yet! This repository **will always be referred to in these notes as the Common Repository**. Soon you will be also using your *personal repository* and it is important to get the distinction and name conventions right from the beginning. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a0650ab",
+   "metadata": {},
+   "source": [
+    "## Windows computers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3047c6dc",
    "metadata": {},
    "source": [
-    "## Windows computers\n",
+    "### Installing Git\n",
     "\n",
-    "**Important Note:** If you already have a working setup of Anaconda Python (with Python 3.8 or 3.9) then skip to the [*Create a Conda Environment for the Course*](#CreateCondaEnv) subsection. If your Python version is older: get updated, people!\n",
+    "**Important Note:** If you already have a working and recent setup of Git (current version is 2.37), skip to the [*Installing Anaconda Python*](#InstallingAnaconda) subsection.\n",
     "\n",
-    "### Installing Anaconda Python"
+    "+ Install [Git for Windows](http://gitforwindows.org) using this link. When asked about \"Adjusting your PATH environment\", select *Git from the command line and also from 3rd-party software*. \n",
+    "  <img src=\"fig/007-InstallingGitForWindows01.png\" width=30%/>\n",
+    "  For all the rest of the setup it is ok to accept the defaults.\n",
+    "  \n",
+    "+ When the Git setup is completed hit the Windows key and begin typing *Git Bash*. You should see results like this: \n",
+    "  <img src=\"fig/007-InstallingGitForWindows02.png\" width=30%/>\n",
+    "  \n",
+    "  Open the *Git Bash* application. A new *terminal* window will appear with a prompt waiting for your commands. \n",
+    "  \n",
+    "  <img src=\"fig/007-InstallingGitForWindows03.png\" width=40%/>\n",
+    "  \n",
+    "  The details of the prompt (user and machine names) will be different in your case, of course. We will return here soon, but first we need a GitHub account.\n",
+    "  \n",
+    "### Create a GitHub account  \n",
+    "\n",
+    "+ **Important Note:** even if you already have a GitHub account you need to have an account that is linked with your university email (the one ending in `@alu.comillas.edu`). You can create that account using [this link](https://github.com). Make sure to log out first if you were already logged with a *non-university-associated* account. And we recommend [reading this advice first](https://happygitwithr.com/github-acct.html#username-advice).\n",
+    "\n",
+    "### Clone the *common repository* \n",
+    "\n",
+    "+ Using the *Git Bash terminal* navigate to the *Course Folder*. You can get there using the `cd` command. **Make sure that you have changed into the right folder before going further!!** You can use the `pwd` command to check your current location. Ask for help if you run into trouble.\n",
+    "\n",
+    "+ In that folder run the following command:\n",
+    "\n",
+    "    `git clone https://github.com/mbdfmad/fmad2223.git`\n",
+    "    \n",
+    "  Git will begin cloning (downloading) the contents of the repo to a folder named `fmad2223` in your computer. The process looks like this (the number of cloned objects will surely be greater in your case):\n",
+    "  \n",
+    "    <img src=\"fig/008-CloningCourseRepo.png\" width=40%/>\n",
+    "  \n",
+    "  The `fmad2223` folder will then be a subfolder of the *Course Folder*. You should consider this `fmad2223` folder as a *read-only* folder. You will soon see how to update its contents as the course progresses, but **you are not expected to directly modify the contents of the `fmad2223` folder** (and you shouldn't). You can *copy* any object from this folder (e.g. the code examples that we will provide) to other locations in your computer if you want to make changes. Finally, if you are a seasoned Git user you can opt for a fork of the repo instead of cloning it. \n",
+    "\n",
+    "### Keeping your local copy of the *common repository* updated.\n",
+    "\n",
+    "+ If you are used to auto syncing tools such as Dropbox, OneDrive, ICloud Drive and the like, you must keep in mind that **Git repos are not auto-syncing**. To keep the information in your repos updated you have to manually update them (both ways, from your computer to GitHub and viceversa).\n",
+    "\n",
+    "+ **This will be very important for our workflow in the lectures of the course.** So make sure to get it right, and ask for help soon if you need it. Every work session for this course will begin with the following ritual:\n",
+    "    + Open a *Terminal* (the Git Bash terminal or, see below, the Anaconda terminal are both ok).\n",
+    "    + Navigate to your local `fmad2223` folder. Do not confuse this with the *Course Folder*.\n",
+    "    + Run `git status` to check that everything is ok. \n",
+    "    + Run `git pull origin main`. Depending on the update status of your local copy of the repo you will either download the new contents from the repo at GitHub or you will receive a message saying that you are `Already up to  date`.  \n",
+    "    \n",
+    "  Don't worry too much, however. You cannot break anything, since you won't have write permissions for this GitHub repo. Worst case scenario, you can (backup your local files and) delete the `fmad2223` folder and clone it again to get the latest contents.\n",
+    "    \n",
+    "### Setting up a local Git configuration for the Common Repository\n",
+    "\n",
+    "+ Using still the *Git Bash* terminal, change into the `fmad2223` folder and set your local Git configuration with these commands (the first one is the folder change from the *Course Folder* to `fmad2223`):\n",
+    "\n",
+    "  `cd fmad2223`  \n",
+    "  `git config --local user.name 'replace_this_with_your_GitHub_username'`  \n",
+    "  `git config --local user.email 'replace_this_with_your_university_email'`  \n",
+    "  `git config --global init.defaultBranch main`\n",
+    "  \n",
+    "+ By the way, if you are doing this setup for the first time, now you can close the *Git Bash* terminal window.   "
    ]
   },
   {
@@ -25,6 +112,11 @@
    "id": "ca49b163",
    "metadata": {},
    "source": [
+    "### Installing Anaconda Python <a name=\"InstallingAnaconda\"></a>\n",
+    "\n",
+    "**Important Note:** If you already have a working setup of Anaconda Python (with Python 3.8 or 3.9) then skip to the [*Create a Conda Environment for the Course*](#CreateCondaEnv) subsection. If your Python version is older: get updated, people!\n",
+    "\n",
+    "\n",
     "+ Begin by navigating to the [Anaconda Web Page](https://www.anaconda.com/):\n",
     "\n",
     "    <img src=\"fig/000-WebAnaconda.PNG\" width=50%/>\n",
@@ -49,7 +141,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "62317553",
    "metadata": {},
@@ -61,9 +152,9 @@
     "    + [A Guide to Python’s Virtual Environments](https://towardsdatascience.com/virtual-environments-104c62d48c54)\n",
     "    + [The Definitive Guide to Conda Environments](https://towardsdatascience.com/a-guide-to-conda-environments-bc6180fc533)\n",
     "\n",
-    "+ We will be using a Conda environment named `fmad` for this course. To create the environment we will use the *Anaconda Terminal (or Anaconda Prompt)*. Hit the Windows key and begint typing *Anaconda*. You should see results like this: \n",
+    "+ We will be using a Conda environment named `fmad` for this course. To create the environment we will use the *Anaconda Terminal (or Anaconda Prompt)*. Hit the Windows key and begin typing *Anaconda*. You should see results like this: \n",
     "\n",
-    "    <img src=\"fig/002-AnacondaWindowsMenu.PNG\" width=50%/>\n",
+    "    <img src=\"fig/002-AnacondaWindowsMenu.PNG\" width=30%/>\n",
     "    \n",
     "    The Anaconda Navigator is a GUI interface to manage your Anaconda setup. Some people like it a lot, but we will be using mostly the (old school) terminal-based command-line approach. Thus, start the *Anaconda Prompt* and a window like this one will open:\n",
     "\n",
@@ -79,38 +170,146 @@
     "\n",
     "    <img src=\"fig/004-AnacondaEnvironmentCreate01.png\" width=50%/>\n",
     "    \n",
-    "    For the time being ignore the warning about updating Conda (we can do it later) and just answer *y* and hit *Enter*. A successful environment creation looks like:\n",
+    "    For the time being ignore the warning about updating Conda it it appears (we will deal with it in the next step) and just answer *y* and hit *Enter*. A successful environment creation looks like:\n",
     "\n",
     "    <img src=\"fig/004-AnacondaEnvironmentCreate02.png\" width=30%/>\n",
     "    \n",
-    "### Activate the environment and install the first libraries    \n",
-    "    \n",
+    "### Update conda\n",
     "\n",
+    "+ To update conda (if the warning appeared in the previous step) run this command:\n",
+    "\n",
+    "    `conda update -n base -c defaults conda`\n",
     "    \n",
+    "    As the following picture illustrates conda will present you with a summary of the update operation. Answer *y* and hit *Enter*.\n",
     "    \n",
+    "     <img src=\"fig/005-UpdatingConda01.png\" width=50%/>\n",
+    "     \n",
+    "     Then conda will download the required software to autoupdate. The expected result looks like this:\n",
+    "     \n",
+    "     <img src=\"fig/005-UpdatingConda02.png\" width=50%/>\n",
+    "\n",
+    "### Activate the environment   \n",
+    "    \n",
+    "+ When we created the `fmad` environment in a previous step, Conda showed us the activation command:  \n",
+    "\n",
+    "    `conda activate fmad`\n",
+    "    \n",
+    "    Run this command now. This will activate the newly created environment `fmad`. Note that the name of the active environment appears in parenthesis at the beginning of the prompt line:\n",
+    "\n",
+    "    <img src=\"fig/004-AnacondaEnvironmentCreate03.png\" width=30%/>\n",
+    "    \n",
+    "    **Make sure that the environment is correctly activated before proceeding!!** If you have any problem ask for help.\n",
+    "    \n",
+    "###  Install the first library\n",
+    "\n",
+    "+ The first library that we will install is [NumPy](https://numpy.org), which provides the foundation for much of the work we will doing in this course. We will discuss NumPy in coming sessions of the course. But to use it we first need to install it in our `fmad` environment. Execute this command now:\n",
+    "    \n",
+    "    `conda install --name fmad numpy`\n",
+    "    \n",
+    "    A summary of the libraries that need to be downloaded for the NumPy setup will appear\n",
+    "    \n",
+    "    <img src=\"fig/006-InstallingLibraries01.png\" width=50%/>\n",
+    "    \n",
+    "    followed by a rather lengthy list of the libraries about to be installed (in most cases these two lists are almost equal) \n",
+    "\n",
+    "     <img src=\"fig/006-InstallingLibraries02.png\" width=50%/>\n",
+    "     \n",
+    "     Answer yes to make the setup begin and wait patiently while NumPy and all of its requirements are downloaded and installed. The proccess should end like this:\n",
+    "     \n",
+    "     <img src=\"fig/006-InstallingLibraries03.png\" width=50%/>     \n",
+    "\n",
+    "###  Install aditional libraries\n",
+    "\n",
+    "+ NumPy is just the first of the libraries that we will use in the course, but many others will also come into play. To name a few of the most relevant:\n",
+    "\n",
+    "    + [NumPy](https://numpy.org)\n",
+    "    + [Pandas](https://pandas.pydata.org)\n",
+    "    + [MatPlotLib](https://matplotlib.org)\n",
+    "    + [Scikit-Learn](https://scikit-learn.org/stable/)\n",
+    "\n",
+    "  Take a few moments to visit the homepage for each of these libraries. \n",
+    "\n",
+    "**Exercise:** install all these libraries to the `fmad` environment. To install several libraries you don't need to repeat `conda install` for each library; you can use a single install command and separate the names of the libraries with a space.\n",
+    "\n",
+    "### Install the Jupyter Notebook & Jupyter Lab\n",
+    "\n",
+    "+ In this course we will talk to Python using the onterface provided by *Jupyter Notebooks*. The [Jupyter Project](https://jupyter.org) provides a general purpose development environment which is well suited for Python (but not limited to it). It will play a central role in our work with Python, but it installs (to the `fmad` environment) just like any other library.\n",
+    "\n",
+    "    `conda install --name fmad jupyter`\n",
+    "    \n",
+    "+ When the setup ends execute the following two commands in order. The first one changes your current directory to your user folder in Windows. The second command opens the Jupyter Notebook in your *default Web Browser*:  \n",
+    "\n",
+    "   `cd %HOMEPATH%`  \n",
+    "   `jupyter notebook &`\n",
+    "\n",
+    "  Like this:\n",
+    "  \n",
+    "  <img src=\"fig/009-StartingJupyter01.png\" width=50%/>\n",
+    "       \n",
+    "  *Note:* We recommend to always start Jupyter from a folder high enough in your folder structure: you won't be able to easily move up from the starting point later. Make sure, however, that you are at the very least, at the *Course folder* level. \n",
+    "  \n",
+    "  In a few moments your default *Web Browser* will open to a new page that shows the entry point for the running Jupyter server that we have just started:\n",
+    "\n",
+    "  <img src=\"fig/009-StartingJupyter02.png\" width=50%/>\n",
+    "  \n",
+    "  You can use that page to navigate your folder structure until you get to the *Course Folder*. Once you are seeing the contents of that folder,   \n",
+    "       \n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f25e377",
+   "id": "1db448a6",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3112ad66",
+   "cell_type": "markdown",
+   "id": "d0bfb800",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## MacOS computers\n",
+    "\n",
+    "+ MacOS includes a *system version* of Python. We will not be using that version but we need to make sure that it does not interfere with our work and that the basic functioning of your computer is not affected. Always keep recent backups of your data before any complex setup like this!\n",
+    "+ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c23968f0",
+   "metadata": {},
+   "source": [
+    "## Linux computers\n",
+    "\n",
+    "+ Most recent versions of Linux already come \n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "455b42f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zsh:1: no matches found: nbconvert[webpdf]\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install nbconvert[webpdf]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "334c0296",
    "metadata": {},
    "outputs": [],
    "source": []
