--- a/01-Software Setup.ipynb
+++ b/01-Software Setup.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "d362c974",
    "metadata": {},
    "source": [
     "# Software Setup"
@@ -9,6 +10,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c083be26",
    "metadata": {},
    "source": [
     "## Folder structure for the course\n",
@@ -35,6 +37,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "870f5e49",
    "metadata": {},
    "source": [
     "## Windows computers"
@@ -42,6 +45,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c42b026d",
    "metadata": {},
    "source": [
     "### Installing Git\n",
@@ -100,11 +104,12 @@
     "  `git config --local user.email 'replace_this_with_your_university_email'`  \n",
     "  `git config --global init.defaultBranch main`\n",
     "  \n",
-    "+ By the way, if you are doing this setup for the first time, now you can close the *Git Bash* terminal window.   "
+    "+ By the way, if you are doing this setup for the first time, you can now close the *Git Bash* terminal window.   "
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "985719b3",
    "metadata": {},
    "source": [
     "### Installing Anaconda Python <a name=\"InstallingAnaconda\"></a>\n",
@@ -137,6 +142,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d8ad7881",
    "metadata": {},
    "source": [
     "\n",
@@ -246,21 +252,31 @@
     "\n",
     "  <img src=\"fig/009-StartingJupyter02.png\" width=50%/>\n",
     "  \n",
-    "  You can use that page to navigate your folder structure until you get to the *Course Folder*. Once you are seeing the contents of that folder,   \n",
-    "       \n",
+    "  You can use that page to navigate your folder structure until you get to the *Course Folder*. Once you are seeing the contents of that folder, open the `01a_test_your_setup.ipynb` file and follow the instructions there. If errors appear try to go over the setup procedure again and if you are still having trouble ask for our help. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd7348d2",
+   "metadata": {},
+   "source": [
+    "### Final Remarks for Windows Users\n",
     "\n",
-    "\n"
+    "+ When you are don with the setup checks use the `File` menu and then `Close and Halt` the notebook. \n",
+    "+ "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "08f5d45a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "5a560157",
    "metadata": {},
    "source": [
     "## MacOS computers\n",
@@ -271,6 +287,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "772602a8",
    "metadata": {},
    "source": [
     "## Linux computers\n",
@@ -281,24 +298,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "4972ae00",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "zsh:1: no matches found: nbconvert[webpdf]\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install nbconvert[webpdf]"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2c5075c0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -306,7 +315,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -320,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
