WIP 01-Software Setup

--- a/01-Software_Setup_MacOS_Version.ipynb
+++ b/01-Software_Setup_MacOS_Version.ipynb
@@ -5,7 +5,7 @@
    "id": "d362c974",
    "metadata": {},
    "source": [
-    "# Software Setup"
+    "# Software Setup, Windows Version"
    ]
   },
   {
@@ -40,12 +40,12 @@
    "id": "870f5e49",
    "metadata": {},
    "source": [
-    "## Windows computers"
+    "## Software Setup and First Steps"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c42b026d",
+   "id": "a65226a4",
    "metadata": {},
    "source": [
     "### Installing Git\n",
@@ -63,12 +63,24 @@
     "  \n",
     "  <img src=\"fig/007-InstallingGitForWindows03.png\" width=40%/>\n",
     "  \n",
-    "  The details of the prompt (user and machine names) will be different in your case, of course. We will return here soon, but first we need a GitHub account.\n",
-    "  \n",
+    "  The details of the prompt (user and machine names) will be different in your case, of course. We will return here soon, but first we need a GitHub account."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca24152c",
+   "metadata": {},
+   "source": [
     "### Create a GitHub account  \n",
     "\n",
-    "+ **Important Note:** even if you already have a GitHub account you need to have an account that is linked with your university email (the one ending in `@alu.comillas.edu`). You can create that account using [this link](https://github.com). Make sure to log out first if you were already logged with a *non-university-associated* account. And we recommend [reading this advice first](https://happygitwithr.com/github-acct.html#username-advice).\n",
-    "\n",
+    "+ **Important Note:** even if you already have a GitHub account you need to have an account that is linked with your university email (the one ending in `@alu.comillas.edu`). You can create that account using [this link](https://github.com). Make sure to log out first if you were already logged with a *non-university-associated* account. And we recommend [reading this advice first](https://happygitwithr.com/github-acct.html#username-advice)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8ab7cd0",
+   "metadata": {},
+   "source": [
     "### Clone the *common repository* \n",
     "\n",
     "+ Using the *Git Bash terminal* navigate to the *Course Folder*. You can get there using the `cd` command. **Make sure that you have changed into the right folder before going further!!** You can use the `pwd` command to check your current location. Ask for help if you run into trouble.\n",
@@ -81,8 +93,14 @@
     "  \n",
     "    <img src=\"fig/008-CloningCourseRepo.png\" width=40%/>\n",
     "  \n",
-    "  The `fmad2223` folder will then be a subfolder of the *Course Folder*. You should consider this `fmad2223` folder as a *read-only* folder. You will soon see how to update its contents as the course progresses, but **you are not expected to directly modify the contents of the `fmad2223` folder** (and you shouldn't). You can *copy* any object from this folder (e.g. the code examples that we will provide) to other locations in your computer if you want to make changes. Finally, if you are a seasoned Git user you can opt for a fork of the repo instead of cloning it. \n",
-    "\n",
+    "  The `fmad2223` folder will then be a subfolder of the *Course Folder*. You should consider this `fmad2223` folder as a *read-only* folder. You will soon see how to update its contents as the course progresses, but **you are not expected to directly modify the contents of the `fmad2223` folder** (and you shouldn't). You can *copy* any object from this folder (e.g. the code examples that we will provide) to other locations in your computer if you want to make changes. Finally, if you are a seasoned Git user you can opt for a fork of the repo instead of cloning it. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c66b33e",
+   "metadata": {},
+   "source": [
     "### Keeping your local copy of the *common repository* updated.\n",
     "\n",
     "+ If you are used to auto syncing tools such as Dropbox, OneDrive, ICloud Drive and the like, you must keep in mind that **Git repos are not auto-syncing**. To keep the information in your repos updated you have to manually update them (both ways, from your computer to GitHub and viceversa).\n",
@@ -92,8 +110,16 @@
     "    + Navigate to your local `fmad2223` folder. Do not confuse this with the *Course Folder*.\n",
     "    + Run `git status` to check that everything is ok. \n",
     "    + Run `git pull origin main`. Depending on the update status of your local copy of the repo you will either download the new contents from the repo at GitHub or you will receive a message saying that you are `Already up to  date`.  \n",
+    "    + If you are going to modify any of the files in `fmad2223` and you want to keep the changes, **make sure to copy the files first to a different folder outside of the common repository.** Just create as many additional subfolders of the course folder as you see fit, but make so outside of the common repository. \n",
     "    \n",
-    "  Don't worry too much, however. You cannot break anything, since you won't have write permissions for this GitHub repo. Worst case scenario, you can (backup your local files and) delete the `fmad2223` folder and clone it again to get the latest contents.\n",
+    "  Don't worry too much, however. You cannot break anything, since you won't have write permissions for this GitHub repo. Worst case scenario, you can (backup your local files and) delete the `fmad2223` folder and clone it again to get the latest contents."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c42b026d",
+   "metadata": {},
+   "source": [
     "    \n",
     "### Setting up a local Git configuration for the Common Repository\n",
     "\n",
@@ -142,10 +168,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8ad7881",
+   "id": "1e177df2",
    "metadata": {},
    "source": [
-    "\n",
     "### Create a Conda Environment for the Course <a name=\"CreateCondaEnv\"></a>\n",
     "\n",
     "+ A conda environment allows us to organize our work in projects, keeping each project dependencies isolated from the rest of your work. It is also the best way to avoid running into the potentially catastrophic situation in where you have several Python versions and they conflict to [create a mess](https://xkcd.com/1987/). We urge you to **always use environments** to organize your work in Python. You can learn more about the use of Conda environments [in this link](https://docs.conda.io/projects/conda/en/latest/user-guide/tasks/manage-environments.html#). And to learn more about environments in Python in general, you can check these two links:\n",
@@ -173,7 +198,14 @@
     "    For the time being ignore the warning about updating Conda it it appears (we will deal with it in the next step) and just answer *y* and hit *Enter*. A successful environment creation looks like:\n",
     "\n",
     "    <img src=\"fig/004-AnacondaEnvironmentCreate02.png\" width=30%/>\n",
-    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e4308c4",
+   "metadata": {},
+   "source": [
     "### Update conda\n",
     "\n",
     "+ To update conda (if the warning appeared in the previous step) run this command:\n",
@@ -186,8 +218,14 @@
     "     \n",
     "     Then conda will download the required software to autoupdate. The expected result looks like this:\n",
     "     \n",
-    "     <img src=\"fig/005-UpdatingConda02.png\" width=50%/>\n",
-    "\n",
+    "     <img src=\"fig/005-UpdatingConda02.png\" width=50%/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "728ae79c",
+   "metadata": {},
+   "source": [
     "### Activate the environment   \n",
     "    \n",
     "+ When we created the `fmad` environment in a previous step, Conda showed us the activation command:  \n",
@@ -199,7 +237,14 @@
     "    <img src=\"fig/004-AnacondaEnvironmentCreate03.png\" width=30%/>\n",
     "    \n",
     "    **Make sure that the environment is correctly activated before proceeding!!** If you have any problem ask for help.\n",
-    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5188822b",
+   "metadata": {},
+   "source": [
     "###  Install the first library\n",
     "\n",
     "+ The first library that we will install is [NumPy](https://numpy.org), which provides the foundation for much of the work we will doing in this course. We will discuss NumPy in coming sessions of the course. But to use it we first need to install it in our `fmad` environment. Execute this command now:\n",
@@ -216,8 +261,14 @@
     "     \n",
     "     Answer yes to make the setup begin and wait patiently while NumPy and all of its requirements are downloaded and installed. The proccess should end like this:\n",
     "     \n",
-    "     <img src=\"fig/006-InstallingLibraries03.png\" width=50%/>     \n",
-    "\n",
+    "     <img src=\"fig/006-InstallingLibraries03.png\" width=50%/>     "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5de838b",
+   "metadata": {},
+   "source": [
     "###  Install aditional libraries\n",
     "\n",
     "+ NumPy is just the first of the libraries that we will use in the course, but many others will also come into play. To name a few of the most relevant:\n",
@@ -229,8 +280,14 @@
     "\n",
     "  Take a few moments to visit the homepage for each of these libraries. \n",
     "\n",
-    "**Exercise:** install all these libraries to the `fmad` environment. To install several libraries you don't need to repeat `conda install` for each library; you can use a single install command and separate the names of the libraries with a space.\n",
-    "\n",
+    "**Exercise:** install all these libraries to the `fmad` environment. To install several libraries you don't need to repeat `conda install` for each library; you can use a single install command and separate the names of the libraries with a space."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8ad7881",
+   "metadata": {},
+   "source": [
     "### Install the Jupyter Notebook & Jupyter Lab\n",
     "\n",
     "+ In this course we will talk to Python using the onterface provided by *Jupyter Notebooks*. The [Jupyter Project](https://jupyter.org) provides a general purpose development environment which is well suited for Python (but not limited to it). It will play a central role in our work with Python, but it installs (to the `fmad` environment) just like any other library.\n",
@@ -252,7 +309,7 @@
     "\n",
     "  <img src=\"fig/009-StartingJupyter02.png\" width=50%/>\n",
     "  \n",
-    "  You can use that page to navigate your folder structure until you get to the *Course Folder*. Once you are seeing the contents of that folder, open the `01a_test_your_setup.ipynb` file and follow the instructions there. If errors appear try to go over the setup procedure again and if you are still having trouble ask for our help. \n"
+    "You can use that page to navigate your folder structure until you get to the *Course Folder*. Once you are seeing the contents of that folder, open the `01a_test_your_setup.ipynb` file and follow the instructions there. If errors appear try to go over the setup procedure again and if you are still having trouble ask for our help. "
    ]
   },
   {
@@ -262,17 +319,20 @@
    "source": [
     "### Final Remarks for Windows Users\n",
     "\n",
-    "+ When you are don with the setup checks use the `File` menu and then `Close and Halt` the notebook. \n",
-    "+ "
+    "+ The terminal window that you used to start Jupyter should remain open during all the work session. **Be careful:** Closing it can make the server crash and you may lose part of your work.\n",
+    "\n",
+    "+ Remember to make external copies of the files in `fmad2223` before modifying them.\n",
+    "\n",
+    "+ When you are done with the setup checks use the `File` menu and then `Close and Halt` the notebook. If your browser asks for confirmation that you really want to close the page: don't worry, you can safely close it.\n",
+    "\n",
+    "+ Every time you finish working with Jupyter you should go back to the `Home Page` of the Jupyter server (the one which shows your folder structure) and use the `Quit` button on the top right side of that window to shutdown Jupyter. A popup window will appear to inform you that you should close that browser tab.\n",
+    "\n",
+    "+ Return to the terminal that you used to initiate Jupyter. You should now see some messsage confirming that the server is shut down. If you are done working in this Python environment, issue the command:\n",
+    "\n",
+    "  `conda deactivate`\n",
+    "    \n",
+    "  The prompt will change to indicate that you are back to the `base` conda environment. You can now close the terminal window as well if you wish. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "08f5d45a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
