--- a/01-Software_Setup_Windows_Version.ipynb
+++ b/01-Software_Setup_Windows_Version.ipynb
@@ -293,7 +293,8 @@
     "    + [NumPy](https://numpy.org)\n",
     "    + [Pandas](https://pandas.pydata.org)\n",
     "    + [MatPlotLib](https://matplotlib.org)\n",
-    "    + [Scikit-Learn](https://scikit-learn.org/stable/)\n",
+    "    + [Scikit-Learn](https://scikit-learn.org)\n",
+    "    + [Seaborn](https://seaborn.pydata.org)\n",
     "\n",
     "  Take a few moments to visit the homepage for each of these libraries. \n",
     "\n",
