WIP Session02, EDA

--- a/01-Software_Setup_Windows_Version.ipynb
+++ b/01-Software_Setup_Windows_Version.ipynb
@@ -17,8 +17,8 @@
     "\n",
     "+ Please, read this document completely before starting your setup, so as to get a general idea of what is coming. In particular, please read the final [*Alternative Setups*](#AlternativeSetups) section. If you have any doubts, we are happy to help.\n",
     "+ **Be careful!** Another reason to read this document in advance is that we have seen too often users ruining their Python setups because of a rushed decision. Wrecking your system can be a matter of minutes, getting it back can take you hours or even days. \n",
-    "Don't let this be you!! When in doubt, please talk to us first.\n",
-    "![](https://imgs.xkcd.com/comics/python_environment.png)  \n",
+    "Don't let the cartoon below be you!! When in doubt, please talk to us first.\n",
+    "![](fig/XKCD_python_environment.png)  \n",
     "\n",
     "*Image from [XKCD](https://xkcd.com/1987/)* \n",
     "\n",
@@ -62,15 +62,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66a4ab66",
+   "id": "e1786f39-0d26-4437-a3e1-d4caf043a731",
    "metadata": {},
    "source": [
     "### Installing Git\n",
     "\n",
     "**Important Note:** If you already have a working and recent setup of Git (current version is 2.37), skip to the [*Installing Anaconda Python*](#InstallingAnaconda) subsection.\n",
     "\n",
-    "+ Install [Git for Windows](http://gitforwindows.org) using this link. When asked about \"Adjusting your PATH environment\", select *Git from the command line and also from 3rd-party software*. \n",
+    "+ Install [Git for Windows](http://gitforwindows.org) using this link. When asked about \"Adjusting your PATH environment\", select *Git from the command line and also from 3rd-party software*. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "950a18f0-5775-4e9f-b26b-5d5d283a1fb8",
+   "metadata": {},
+   "source": [
     "  <img src=\"fig/007-InstallingGitForWindows01.png\" width=30%/>\n",
+    "  \n",
     "  For all the rest of the setup it is ok to accept the defaults.\n",
     "  \n",
     "+ When the Git setup is completed hit the Windows key and begin typing *Git Bash*. You should see results like this: \n",
@@ -80,7 +88,8 @@
     "  \n",
     "  <img src=\"fig/007-InstallingGitForWindows03.png\" width=40%/>\n",
     "  \n",
-    "  The details of the prompt (user and machine names) will be different in your case, of course. We will return here soon, but first we need a GitHub account."
+    "\n",
+    "The details of the prompt (user and machine names) will be different in your case, of course. We will return here soon, but first we need a GitHub account."
    ]
   },
   {
@@ -335,7 +344,7 @@
    "id": "bd7348d2",
    "metadata": {},
    "source": [
-    "### Final Remarks for Windows Users\n",
+    "### Additional Remarks for Windows Users\n",
     "\n",
     "+ The terminal window that you used to start Jupyter should remain open during all the work session. **Be careful:** Closing it can make the server crash and you may lose part of your work.\n",
     "\n",
@@ -365,12 +374,81 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4972ae00",
+   "cell_type": "markdown",
+   "id": "ceb50c38",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Using Jupyter Notebooks"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ca123726",
+   "metadata": {},
+   "source": [
+    "+ The document you are reading now was created as a Jupyter Notebook. That is the basic tool that we will be using in this course to write our Python code. To create and read Jupyter Notebooks we use web browsers.    \n",
+    "\n",
+    "+ A Jupyter notebook is structured in *cells*. There are two basic types of cells:\n",
+    "    + *Code cells* where you write and execute Python code.\n",
+    "    + *Markdown cells* that contain text, formulas, images, links that you can use to document the code. We will provide further information about markdown below. \n",
+    "\n",
+    "+ When you create a new notebook it will only contain (empty) code cells. You can convert any cell from code to markdown by selecting the cell and hiting the `M` key in your keyboard. You must be in Command mode to do this (see below). Converting the other way round (markdown to code) can be accomplished with the `Y` key. There are also menu options for type conversion in the `Cell` menu of the notebook interface.\n",
+    "\n",
+    "+ Every time you run or render the *last* cell of your notebook a new cell will be added below. If you need to insert more cells somewhere in the notebook you can use the *Insert* menu. But the keyboard shortcuts `A` and `B` can also be used to add new cells `A`bove or `B`elow the active cell. For this to work you need to be in command mode, to be explained in the next item.\n",
+    "\n",
+    "+ When using a Jupyter Notebook there is always an *active cell* which you can select with the mouse. The active cell (can be either code or markdown) is highlighted by a surrounding frame, and the color of frame indicates the *mode*:\n",
+    "    + *Edit mode (green)*. The cursor blinks inside the cell and lets you modify the contents of the cell. That is, we use this mode to write code or markdown depending of the cell type.\n",
+    "    + *Command mode (blue)*. This mode is used to operate on the contents of a cell as a whole. In this mode you can *run the code* in a code cell or you can *render the content* of a markdown cell. You can also use this mode to copy or move the cell, delete it, etc.\n",
+    "    \n",
+    "+ If you are in edit mode you can change to command mode hitting the `Esc` key (or clicking with your mouse outside the active cell). If you are in command mode you can change to edit mode with the `Enter` &#9166; key (or clicking inside the cell, double-click if it is not the active cell).\n",
+    "\n",
+    "+ To run or render the content of the cell:\n",
+    "    + Make sure the cell is active (the mode is irrelevant).\n",
+    "    + Use the key combination Shift + Enter (&#8679; + &#9166;)\n",
+    "  If the cell contains Python code it will be executed. Keep in mind that if the code in that cell depends on the results of previous cells then they must also be executed beforehand. There are some useful options in the *Cell* menu of the notebook interface that will help you run the required parts of the notebook.\n",
+    "\n",
+    "+ Besides the ones we have described there are many useful commands and keyboard shortcuts to ease the use of notebooks. Take a look at the *Help* menu. In particular, make sure to look at the *Keyboard Shortcuts* section of that menu."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d58d0884",
+   "metadata": {},
+   "source": [
+    "## Markdown\n",
+    "\n",
+    "+ Markdown is a very simple markup language that we use to modify the aspect of the text. For example, to make a sentence *render in italic* you just need to surround it with asterisks. And markdown is not specific of Jupyter notebooks. In fact its support is increasing as a basic tool for text formatting in many technical contexts. Learning the basics of markdown is a good idea. \n",
+    "\n",
+    "+ We recommend to open the source file of this or any other of the course Jupyter notebooks and look at some of the markdown cells (remember, use edit mode) to see how markdown was used to include sectioning commands (sections, subsections), figures, links, bullet lists, etc. If you know how to write $\\LaTeX$ ([you can get a first impression here](https://ashki23.github.io/markdown-latex.html#latex)) you can use it to include nice mathematical equations in your markdown cells:\n",
+    "$$\\int_{-\\infty}^{\\infty}e^{-x^2}dx = \\sqrt{\\pi}$$\n",
+    "By the way, the above result plays an important role in the normal distribution that we will be discussing soon.  \n",
+    " *Note for Latex users.* you don't need a separate installation of LaTeX to use it in Jupyter notebooks, as it is provided by your browser through MathJax.\n",
+    "+ There are many markdown tutorials, mostly equivalent. This recent one focuses on the use of markdown for Jupyter notebooks: [12 things to know about Jupyter Notebook Markdown, by Dayal Chand Aichara](https://medium.com/game-of-data/12-things-to-know-about-jupyter-notebook-markdown-3f6cef811707)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "732175ab",
+   "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8700cd37",
+   "metadata": {},
+   "source": [
+    "# References"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "662107a4",
+   "metadata": {},
+   "source": [
+    "+ For a long time the [The Hitchhiker’s Guide to Python](https://docs.python-guide.org) was one of my favorite resources for Python setup and management. However, recently I have had less success applying its recommendations. It is still a good starting point to keep as a reference but be sure to double check with another recent source for any critical operation. \n",
+    "+ [GitHub repository for the 2021-22 R-based version of this course.](https://github.com/mbdfmad/fmad2122)"
+   ]
   },
   {
    "cell_type": "code",
